Minor fixes and code readability fixes

--- a/src/CSS/MovieCard.css
+++ b/src/CSS/MovieCard.css
@@ -26,6 +26,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 200px;
+  height: 30px;
 }
 
 p {
